--- a/client/package.json
+++ b/client/package.json
@@ -19,14 +19,18 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.0.3",
     "cloudinary-video-player": "^1.11.1",
+    "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.2.3",
     "node-gyp": "^10.0.1",
+    "npm": "^10.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.3",
     "react-table": "^7.8.0",
+    "react-toastify": "^10.0.5",
     "shaka-player-react": "^1.1.5"
   },
   "devDependencies": {
