--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,8 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.0.3",
     "cloudinary-video-player": "^1.11.1",
+    "emailjs": "^4.0.3",
+    "emailjs-com": "^3.2.0",
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
