added JWT_SECRET in .env

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 MONGODB_URL=mongodb+srv://kartikdhumal:guddupandit2023@cluster0.dtpx5rn.mongodb.net/netflixapp?retryWrites=true&w=majority
+JWT_SECRET=kartikjwt
