--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 MONGODB_URL=mongodb+srv://kartikdhumal:guddupandit2023@cluster0.dtpx5rn.mongodb.net/netflixapp?retryWrites=true&w=majority
 JWT_SECRET=kartikjwt
+PORT=6001
